# wave_function_collapse

./: .gitignore  Cargo.toml  README.md
benches/: wfc_bench.rs
demo/: main.rs
src/: array2d.rs  lib.rs
