[package]
name = "wave_function_collapse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
enum_derive_list = "0.1.0"
itertools = "0.10.5"
piston_window = "0.128.0"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.4.0"


[[bin]]
name = "wfc_demo"
path = "demo/main.rs"

[[bench]]
name = "wfc_bench"
harness = false
