[package]
name = "wave_function_collapse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
enum_derive_list = "0.1.0"
image = "0.24.7"
indicatif = "0.17.7"
itertools = "0.10.5"
rand = "0.8.5"

[profile.release]
debug = true

[[bin]]
name = "wfc_demo"
path = "demo/main.rs"
